...
          testID="node-import-key-button"
          icon="key-plus"
          mode="text"
          compact
          onPress={() => navigation.navigate('ImportKey')}
        >
          Import Key
        </Button>
      </View>

      <FlatList
        data={nodes}
        keyExtractor={(n) => n.node_id}
...
